feat: add support for configurable Copilot agent username and commit email in environment settings

--- a/.env.example
+++ b/.env.example
@@ -6,6 +6,8 @@ GITLAB_API_BASE=https://gitlab.com
 WEBHOOK_SECRET_TOKEN=
 FALLBACK_TARGET_BRANCH=main
 ORIGINAL_NEEDS_MAX_CHARS=8192
+COPILOT_AGENT_USERNAME=copilot-agent
+COPILOT_AGENT_COMMIT_EMAIL=copilot@github.com
 LISTEN_HOST=0.0.0.0
 LISTEN_PORT=8080
 LOG_DEBUG=false
