feat: add support for inline review comments in MR workflow and new review script

--- a/.env.example
+++ b/.env.example
@@ -11,3 +11,8 @@ COPILOT_AGENT_COMMIT_EMAIL=copilot@github.com
 LISTEN_HOST=0.0.0.0
 LISTEN_PORT=8080
 LOG_DEBUG=false
+
+# Enable inline review comments on specific code lines (requires GitLab API support)
+# Set to 'true' (default) to post review findings as inline comments on the actual code lines
+# Set to 'false' to post all findings as a single general comment
+ENABLE_INLINE_REVIEW_COMMENTS=true
