feat: add internationalization support for Copilot-generated content and implement prompt loader utility

--- a/.env.example
+++ b/.env.example
@@ -16,3 +16,8 @@ LOG_DEBUG=false
 # Set to 'true' (default) to post review findings as inline comments on the actual code lines
 # Set to 'false' to post all findings as a single general comment
 ENABLE_INLINE_REVIEW_COMMENTS=true
+
+# Language for Copilot-generated content (plans, MRs, comments, code reviews)
+# Supported: en (English), zh (Chinese), ja (Japanese)
+# Default: en
+COPILOT_LANGUAGE=en
