Add multiple language translations for GitLab Copilot Coding Agent documentation

--- a/.env.example
+++ b/.env.example
@@ -18,6 +18,6 @@ LOG_DEBUG=false
 ENABLE_INLINE_REVIEW_COMMENTS=true
 
 # Language for Copilot-generated content (plans, MRs, comments, code reviews)
-# Supported: en (English), zh (Chinese), ja (Japanese)
+# Supported: en (English), zh (Chinese), ja (Japanese), hi (Hindi), ko (Korean), th (Thai)
 # Default: en
 COPILOT_LANGUAGE=en
